--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+# Logging file
+logging.file.name=invoive-gen.log
+
+# Logging level for root logger and other specific loggers
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.com.yourpackage=DEBUG
